styles.css
/* ... */
.better-properties-mod-w-full {
	width: 100%;
}

.better-properties-validity {
	&[data-is-valid="true"] {
		color: var(--text-success);
	}
	&[data-is-valid="false"] {
		color: var(--text-error);
	}
}

.better-properties-dropown-property-value {
	display: flex;
	justify-content: center;
	align-items: center;
	gap: var(--size-2-2);

	/* & .better-properties-dropdown-link-button {
		display: inline-flex;
	} */
}

.better-properties-mod-warning {
	display: flex;
	align-items: start;
	gap: 1ch;
	color: var(--text-warning);
}

.multi-select-container {
	--width: 40ch;
	.setting-item-control > & {
		width: var(--width);
	}

	& .multi-select-input {
		padding: var(--pill-padding-y) 0;
		text-align: start;
	}
}

div.metadata-content {
	&[data-better-properties-show-hidden="false"]
		> div.metadata-properties
		> div.metadata-property[data-better-properties-hidden="true"] {
		display: none;
	}

	& > div.metadata-properties {
		position: relative;
		& > .better-properties-label-width-resizer {
			position: absolute;
			height: 100%;
			width: 6px;
			background-color: transparent;
			top: 0;
			left: -5px;
			transform: translateX(var(--metadata-label-width));
			cursor: col-resize;

			&:hover::after,
			&[data-is-dragging]::after {
				background-color: hsl(var(--accent-h) var(--accent-s) var(--accent-l));
			}

			&::after {
				position: absolute;
				content: "";
				height: 100%;
				width: 1px;
				left: 50%;
				top: 50%;
				transform: translate(-50%, -50%);
			}
		}
	}
}

.better-properties-drag-overlay {
	position: fixed;
	inset: 0;
	background-color: transparent;
}

.better-properties-vertical-tab-modal-title {
	font-size: var(--font-ui-medium);
	text-overflow: ellipsis;
	overflow-x: hidden;
}

.menu-item[data-is-better-properties] .menu-item-icon {
	color: var(--text-accent);
}

.better-properties-mod-error {
	color: var(--text-error);

	&:hover,
	&.clickable-icon:hover {
		color: var(--text-error);
		opacity: 0.5;
	}
}

.better-properties-color-text-component-container {
	display: flex;
	align-items: center;
	gap: var(--size-2-2);
	& > .better-properties-color-text-component-colors-container {
		& > input[type="color"] {
			opacity: 0;
			position: absolute;
			left: 50%;
			top: 50%;
			transform: translate(-50%, -50%);
			pointer-events: none;
		}
	}
}

.better-properties-swatch,
.better-properties-swatch.better-properties-combobox-select {
	background: var(--better-properties-bg, black);
	height: var(--swatch-width);
	width: var(--swatch-width);
	border-radius: var(--swatch-radius);
	box-shadow: var(--swatch-shadow);
	/* margin: calc(var(--swatch-width) / 2); */
	caret-color: transparent;
	color: transparent;
	cursor: var(--cursor);
	display: flex;
	justify-content: center;
	align-items: center;

	&:focus-within,
	&:active,
	&:hover {
		outline: 3px solid var(--background-modifier-border-focus);
	}

	& > .better-properties-swatch-input {
		opacity: 0;
		width: 0;
		height: 0;
		pointer-events: none;
	}
}

.better-properties-select-container {
	display: flex;
	gap: var(--size-2-2);

	&:has(.data-better-properties-combobox-mod-empty) {
		width: 100%;
	}

	& > .better-properties-select-aux:empty {
		display: none;
	}
}

.better-properties-combobox-select {
	display: flex;
	/* min-height: var(--input-height); */
	align-items: center;
	gap: var(--size-2-1);
	min-width: 0;
	width: fit-content;
	font-size: var(--metadata-input-font-size);
	cursor: default;
	--better-properties-close-display: none;

	&:focus-within {
		--better-properties-close-display: flex;
		opacity: 1;
	}

	&:focus-within,
	&:active {
		outline: 3px solid var(--background-modifier-border-focus);
	}

	&.data-better-properties-combobox-mod-empty {
		opacity: 0;
		width: 100%;
		height: 100%;
	}

	& > .better-properties-combobox-select-close {
		cursor: var(--cursor);
		color: rgb(var(--mono-rgb-100));
		border-radius: var(--radius-s);
		display: var(--better-properties-close-display);
		align-items: center;
		--icon-size: var(--icon-xs);
		--icon-stroke: var(--icon-xs-stroke-width);

		&:hover {
			color: rgb(var(--mono-rgb-0));
		}
	}
}

.better-properties-combobox-search {
	flex: auto;
}

[data-better-properties-hidden="true"] {
	display: none;
}
.better-properties-searchable-menu.menu {
	/* TODO can't get user-select:text to work anywhere in here */
	user-select: text;
	& .search-input-container {
		--search-icon-color: var(--text-faint);
		margin-bottom: var(--size-2-3);
		padding-bottom: var(--size-4-1);
		border-bottom: var(--border-width) solid var(--background-modifier-border);

		& input[type="search"] {
			border: 0;
			box-shadow: none;
			background-color: transparent;
			user-select: text;
		}
	}

	.menu-item.is-disabled[data-section="body"] {
		display: none;
	}
}

.better-properties-mod-loader > svg {
	animation: spin 1s ease infinite;
}

.better-properties-multiselect-items-container {
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	gap: var(--size-2-3);
	width: 100%;
	height: 100%;
	max-width: 100%;
	/* padding-inline-end: 3ch; */
}

.better-properties-numeric-container {
	width: 100%;
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	gap: var(--size-2-3);
	& .better-properties-numeric-result {
		font-size: var(--metadata-input-font-size);
	}

	& input.metadata-input.metadata-input-number[type="text"] {
		width: fit-content;
	}
}

.metadata-property[data-better-properties-hide-key="true"]
	> .metadata-property-key {
	display: none;
}

.better-properties-bpjs {
	&.better-properties-bpjs-code {
		& .metadata-property {
			width: fit-content;
			display: inline-flex;
			& > .metadata-property-value {
				width: fit-content;
				flex: 0 0 auto;
			}
		}
	}
}
/* ... */

